--- a/src/LuaBundle.properties
+++ b/src/LuaBundle.properties
@@ -35,5 +35,6 @@ color.settings.longcomment.braces=Extended Comment Braces
 color.settings.longcomment=Extended Comment
 color.settings.parenths=Parenthesis
 color.settings.braces=Curly Braces
+color.settings.constant.keywords=Value Keywords
 
 
