--- a/src/LuaBundle.properties
+++ b/src/LuaBundle.properties
@@ -48,5 +48,11 @@ program.parameters=program parms
 new.menu.action.text=menu action
 new.menu.action.description=menu desc
 plugin.descriptor=Lua
+newfile.menu.action.text=New Lua Script
+newfile.menu.action.description=Create a new Lua script file
+newfile.dialog.title=Create Lua script
+newfile.command.name=Lua script
+newfile.dialog.prompt=Create a new Lua script
+file.template.group.title.bash=Lua Script File Templates
 
 
