Just some non-working code as a starting point for the Lua extension interface
--HG--
branch : idea13

--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -127,6 +127,11 @@
         </component>
     </project-components>
 
+    <extensionPoints>
+        <extensionPoint name="inspectionProvider" interface="com.sylvanaar.idea.Lua.extensions.LuaInspectionProvider"></extensionPoint>
+    </extensionPoints>
+
+
     <actions>
         <action id="Lua.NewLuaScript" class="com.sylvanaar.idea.Lua.actions.NewLuaFileAction"
                 text="Lua Script" description="Create new Lua script file">
