Second try. This looks like how we will need to do it. There are classloader issues stemming from how intelliJ loads our plugin. Right now it won't load due to a missing resource.
--HG--
branch : idea13

--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -127,9 +127,9 @@
         </component>
     </project-components>
 
-    <extensionPoints>
-        <extensionPoint name="inspectionProvider" interface="com.sylvanaar.idea.Lua.extensions.LuaInspectionProvider"></extensionPoint>
-    </extensionPoints>
+    <!--<extensionPoints>-->
+        <!--<extensionPoint name="inspectionProvider" interface="com.sylvanaar.idea.Lua.extensions.LuaInspectionProvider"></extensionPoint>-->
+    <!--</extensionPoints>-->
 
 
     <actions>
