Single and double quoted string tokens see #158
--HG--
branch : idea14

--- a/resources/com/sylvanaar/idea/Lua/LuaBundle.properties
+++ b/resources/com/sylvanaar/idea/Lua/LuaBundle.properties
@@ -40,6 +40,8 @@ color.settings.operation=Operators
 color.settings.parameter=Parameter
 color.settings.parenths=Parenthesis
 color.settings.string=Strings
+color.settings.dqstring=Double Quoted Strings
+color.settings.sqstring=Single Quoted Strings
 color.settings.tailcall=Tail Call Returns
 color.settings.upvalue=Upvalue
 
